fix layout issue

--- a/src/app/project/project-list/project-list.component.scss
+++ b/src/app/project/project-list/project-list.component.scss
@@ -6,7 +6,7 @@
 }
 
 .card {
-  flex: 0 0 15rem;
+  flex: 0 0 10rem;
 }
 
 .text-right{
